--- a/index.html
+++ b/index.html
@@ -76,20 +76,23 @@
         }
 
         .logo-icon {
-            width: 50px;
-            height: 50px;
-            background: white;
-            border-radius: 12px;
+            width: 60px;
+            height: 60px;
+            background: rgba(255, 255, 255, 0.95);
+            border-radius: 16px;
             display: flex;
             align-items: center;
             justify-content: center;
-            padding: 8px;
+            padding: 10px;
+            border: 2px solid rgba(255, 255, 255, 0.3);
+            backdrop-filter: blur(10px);
         }
 
         .logo-icon img {
             width: 100%;
             height: 100%;
             object-fit: contain;
+            filter: brightness(0.8);
         }
 
         /* Search */
