--- a/index.html
+++ b/index.html
@@ -75,25 +75,23 @@
             font-weight: bold;
         }
 
-        .logo-icon {
-            width: 60px;
-            height: 60px;
-            background: rgba(255, 255, 255, 0.95);
-            border-radius: 16px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 10px;
-            border: 2px solid rgba(255, 255, 255, 0.3);
-            backdrop-filter: blur(10px);
-        }
+.logo-icon {
+   width: 120px;
+   height: 120px;
+   background: transparent;
+   border-radius: 16px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   padding: 0;
+}
 
-        .logo-icon img {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-            filter: brightness(0.8);
-        }
+.logo-icon img {
+   width: 100%;
+   height: 100%;
+   object-fit: contain;
+   filter: brightness(1.2) contrast(1.1);
+}
 
         /* Search */
         .search-container {
