--- a/index.html
+++ b/index.html
@@ -76,21 +76,39 @@
         }
 
 .logo-icon {
-   width: 120px;
-   height: 120px;
-   background: transparent;
-   border-radius: 16px;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   padding: 0;
+    width: 120px;
+    height: 120px;
+    background: linear-gradient(145deg, rgba(255,255,255,0.1), rgba(255,255,255,0.05));
+    border: 2px solid;
+    border-image: linear-gradient(145deg, rgba(255,193,7,0.8), rgba(116,178,114,0.8)) 1;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 8px;
+    transition: all 0.4s ease;
+    box-shadow: 
+        0 0 20px rgba(255,193,7,0.3),
+        0 4px 15px rgba(0,0,0,0.2);
+}
+
+.logo-icon:hover {
+    transform: scale(1.08) rotate(2deg);
+    box-shadow: 
+        0 0 30px rgba(255,193,7,0.5),
+        0 8px 25px rgba(0,0,0,0.3);
 }
 
 .logo-icon img {
-   width: 100%;
-   height: 100%;
-   object-fit: contain;
-   filter: brightness(1.2) contrast(1.1);
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    filter: brightness(1.3) contrast(1.2) saturate(1.1) drop-shadow(0 2px 8px rgba(0,0,0,0.4));
+    transition: all 0.4s ease;
+}
+
+.logo-icon:hover img {
+    filter: brightness(1.4) contrast(1.3) saturate(1.2) drop-shadow(0 4px 12px rgba(0,0,0,0.5));
 }
 
         /* Search */
