--- a/index.html
+++ b/index.html
@@ -158,16 +158,19 @@
         }
 
         /* Filter Tabs */
-        .filter-tabs {
-            background: white;
-            margin: 24px 0;
-            border-radius: var(--border-radius);
-            padding: 8px;
-            display: flex;
-            gap: 8px;
-            overflow-x: auto;
-            box-shadow: 0 2px 16px var(--shadow);
-        }
+.filter-tabs {
+    background: white;
+    margin: 24px 0;
+    border-radius: var(--border-radius);
+    padding: 8px;
+    display: flex;
+    gap: 8px;
+    overflow-x: auto;
+    box-shadow: 0 2px 16px var(--shadow);
+    position: sticky;
+    top: 84px;
+    z-index: 50;
+}
 
         .filter-tab {
             padding: 12px 24px;
