--- a/index.html
+++ b/index.html
@@ -168,8 +168,9 @@
     overflow-x: auto;
     box-shadow: 0 2px 16px var(--shadow);
     position: sticky;
-    top: 84px;
+    top: 0;
     z-index: 50;
+    backdrop-filter: blur(10px);
 }
 
         .filter-tab {
