--- a/index.html
+++ b/index.html
@@ -159,18 +159,21 @@
 
         /* Filter Tabs */
 .filter-tabs {
-    background: white;
-    margin: 24px 0;
+    background: rgba(255, 255, 255, 0.95);
+    margin: 24px 0 0 0;
     border-radius: var(--border-radius);
     padding: 8px;
     display: flex;
     gap: 8px;
     overflow-x: auto;
     box-shadow: 0 2px 16px var(--shadow);
-    position: sticky;
-    top: 0;
-    z-index: 50;
-    backdrop-filter: blur(10px);
+    position: fixed;
+    top: 120px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: calc(100% - 32px);
+    max-width: 1200px;
+    z-index: 100;
 }
 
         .filter-tab {
