--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@
                     <div class="logo-icon">
                         <img src="images/LOGO.png" alt="Herbal Trinity Logo" onerror="this.parentElement.innerHTML='🌿'">
                     </div>
-                    <span>Herbal Trinity</span>
+                    <span>DIGITAL HERBAL ENCYCLOPEDIA</span>
                 </div>
                 <div class="search-container">
                     <input type="text" class="search-input" placeholder="Search plants, symptoms, uses..." id="searchInput">
