--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
             gap: 24px;
+            margin-top: 100px;
             margin-bottom: 40px;
         }
 
