--- a/about.html
+++ b/about.html
@@ -443,18 +443,18 @@
                          loading="lazy">
                 </div>
                 <div class="author-info">
-                    <h1 class="author-name">Your Name Here</h1>
+                    <h1 class="author-name">Dr. Rosemary Richardson</h1>
                     <p class="author-title">Herbalist • Author • Educator</p>
                     
                     <div class="author-credentials">
                         <span class="credential-badge">🎓 Your Degree/Certification</span>
-                        <span class="credential-badge">🌿 X Years Experience</span>
-                        <span class="credential-badge">📚 Author of X Books</span>
+                        <span class="credential-badge">🌿 7 Years Experience</span>
+                        <span class="credential-badge">📚 Author of 12 Books</span>
                         <span class="credential-badge">🏆 Your Achievement</span>
                     </div>
                     
                     <div class="social-links">
-                        <a href="https://amazon.com/author/your-author-page" target="_blank" class="social-btn amazon-author-btn">
+                        <a href="https://www.amazon.com/stores/Dr.-Rosemary-Richardson/author/B0FCXWH94L?ref=ap_rdr&isDramIntegrated=true&shoppingPortalEnabled=true&ccs_id=9fac11fc-31ca-4b0f-ad9a-2e83dd14f966">
                             📚 Amazon Author Page
                         </a>
                         <a href="books.html" class="social-btn books-btn">
