--- a/books.html
+++ b/books.html
@@ -355,8 +355,8 @@
                     <div class="amazon-badge">Amazon</div>
                 </div>
                 <div class="book-content">
-                    <h3 class="book-title">Your Book Title Here #1</h3>
-                    <p class="book-subtitle">Your Book Subtitle Here - Complete Guide to Something</p>
+                    <h3 class="book-title">Family Herbal Garden | Complete Medicinal Herbs Book for Confident Family Natural Care</h3>
+                    <p class="book-subtitle">Identification, Cultivation, and Essential Properties for Natural Home Remedies</p>
                     <p class="book-description">
                         Write your book description here. This should be an engaging summary that explains what readers will learn from this book and why it's valuable for their herbal medicine journey. Keep it concise but informative.
                     </p>
@@ -378,8 +378,8 @@
                     <div class="amazon-badge">Amazon</div>
                 </div>
                 <div class="book-content">
-                    <h3 class="book-title">Your Book Title Here #2</h3>
-                    <p class="book-subtitle">Your Second Book Subtitle - Advanced Techniques</p>
+                    <h3 class="book-title">Kitchen Herbal Apothecary | DIY Herbal Remedies Every Family Should Know How to Make</h3>
+                    <p class="book-subtitle">Simple Step-by-Step Recipes for Tinctures, Teas, Salves & Natural Medicines Using Common Kitchen Tools</p>
                     <p class="book-description">
                         Description for your second book goes here. Explain what makes this book unique and valuable. Perhaps this is a more advanced book or covers a different aspect of herbal medicine that complements your first book.
                     </p>
@@ -401,8 +401,8 @@
                     <div class="amazon-badge">Amazon</div>
                 </div>
                 <div class="book-content">
-                    <h3 class="book-title">Your Book Title Here #3</h3>
-                    <p class="book-subtitle">Your Third Book Subtitle - Practical Applications</p>
+                    <h3 class="book-title">Natural Family Health | Herbal Solutions for 40+ Ailments Without Expensive Doctor Visits</h3>
+                    <p class="book-subtitle">Comprehensive Guide to Treating Everyday Health Issues with Healing Herbs</p>
                     <p class="book-description">
                         Description for your third book. This could be a practical guide, recipe book, or specialized topic within herbal medicine. Highlight what makes this book special and who would benefit most from reading it.
                     </p>
